--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "@panzoom/panzoom": "^4.5.1",
+    "electron-squirrel-startup": "^1.0.0",
+    "panzoom": "^9.4.3",
+    "tippy": "^0.0.0",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
